--- a/Recreacion.html
+++ b/Recreacion.html
@@ -6,7 +6,7 @@
     <meta name="keywords" content="Dario online, diario.">
     <meta name="author" content="Rompiendo codigos">
     <meta name="description" content="Somos el diario que brinda el mejor servicio">
-    <title>360|Sociedad</title>
+    <title>360|Recreacion</title>
     <link rel="icon" href="img/icon.png">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
