--- a/Deportes.html
+++ b/Deportes.html
@@ -6,7 +6,10 @@
     <meta name="keywords" content="Dario online, diario.">
     <meta name="author" content="Rompiendo codigos">
     <meta name="description" content="Somos un diario que brinda el mejor servicio">
-    <title>Rompiendo codigos Online</title>
-    <link rel="icon" href="Aca va la imagen">
+    <title>360|Deportes</title>
+    <link rel="icon" href="img/icon.png">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Russo+One&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="/styles.css">
+    <link rel="stylesheet" href="styles.css">
+</head>
