--- a/index.html
+++ b/index.html
@@ -5,21 +5,20 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="keywords" content="Dario online, diario.">
     <meta name="author" content="Rompiendo codigos">
-    <meta name="description" content="Somos un diario que brinda el mejor servicio">
+    <meta name="description" content="Somos el diario que brinda el mejor servicio">
     <title>360</title>
-    <link rel="icon" href="Aca va la imagen">
+    <link rel="icon" href="img/icon.png">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Russo+One&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="/styles.css">
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <header>
         <nav>
                 <div class="menu">
                     <input type="checkbox" id="botonmenu">
-                    <label for="botonmenu"> <img src="/img/588a6507d06f6719692a2d15.png" alt="ññ" height="20px" width="20px"></label> 
-
+                    <label for="botonmenu"> <img src="img/588a6507d06f6719692a2d15.png" alt="ññ" height="20px" width="20px"></label> 
                     <ul>
                         <li> 
                             <div class="busqueda">
@@ -27,19 +26,14 @@
                                 class="src" autocomplete="off">
                             </div> 
                         </li>
-                        <li> <a href="/Economía.html">Economía </a> </li>
-                        <li> <a href="/Deportes.html">Deportes </a> </li>
-                        <li> <a href="/Politica.html">Política </a> </li>
-                        <li> <a href="/Sociedad.html">Sociedad </a> </li>
-                        <li> <a href="/Rural.html">Rural </a> </li>
-                        <li> <a href="/Espectaculos.html"> Espectáculos </a> </li>
-                        <li> <a href="/mundo.html"> Mundo</a> </li>
-                        <li> <a href="/Policiales.html">Policiales </a> </li>
+                        <li> <a href="/Deportes.html">Deportes </a> </li> 
+                        <li> <a href="/Sociedad.html">Sociedad </a> </li> 
+                        <li> <a href="/Arte.html">Arte </a> </li> 
+                        <li> <a href="/Recreacion.html">Recreacion </a> </li> 
                         <li> <a href="/Tecnologia.html">Tecnologia </a> </li>
-                        
                     </ul>
                 </div>
         </nav>
     </header>
 </body>
- </html>
+</html>
