nuevas modificaciones en el header

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="keywords" content="Dario online, diario.">
     <meta name="author" content="Rompiendo codigos">
     <meta name="description" content="Somos el diario que brinda el mejor servicio">
-    <title>360</title>
+    <title>360°</title>
     <link rel="icon" href="img/icon.png">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
@@ -26,14 +26,28 @@
                                 class="src" autocomplete="off">
                             </div> 
                         </li>
-                        <li> <a href="/Deportes.html">Deportes </a> </li> 
-                        <li> <a href="/Sociedad.html">Sociedad </a> </li> 
-                        <li> <a href="/Arte.html">Arte </a> </li> 
-                        <li> <a href="/Recreacion.html">Recreacion </a> </li> 
-                        <li> <a href="/Tecnologia.html">Tecnologia </a> </li>
+                        <li> <a href="Deportes.html">Deportes </a> </li> 
+                        <li> <a href="Sociedad.html">Sociedad </a> </li> 
+                        <li> <a href="Arte.html">Arte </a> </li> 
+                        <li> <a href="Recreacion.html">Recreacion </a> </li> 
+                        <li> <a href="Tecnologia.html">Tecnologia </a> </li>
                     </ul>
                 </div>
         </nav>
     </header>
+    <div class="mas_leido">
+        <h2>Lo más leído</h2>
+        <img src="img/espacio.jpg" alt="falta" width="60%" height="10%">
+        <p>resumen de la noticia<br></p>
+        <img src="img/espacio.jpg" alt="falta" width="60%" height="10%">
+        <p>resumen de la noticia<br></p>
+        <div class="sub">
+            <p>Suscribite y mantenete informado</p>
+        </div>
+        <div class="iniciar_sesion">
+            <input type="text" placeholder="user..." >
+            <input type="text" placeholder="password..."><br>
+            <button id="button">Enviar</button>
+        </div>
 </body>
 </html>
