se creó etiqueta footer

--- a/index.html
+++ b/index.html
@@ -49,5 +49,9 @@
             <input type="text" placeholder="password..."><br>
             <button id="button">Enviar</button>
         </div>
+
+        <footer>
+            
+        </footer>
 </body>
 </html>
