se ca,bió icono del menú, y se modificó un poco el estilo

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <meta name="description" content="Somos el diario que brinda el mejor servicio">
     <title>360°</title>
     <link rel="icon" href="img/icon.png">
+    <script src="https://kit.fontawesome.com/4de09098c3.js" crossorigin="anonymous"></script>
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Russo+One&display=swap" rel="stylesheet">
@@ -18,7 +19,8 @@
         <nav>
                 <div class="menu">
                     <input type="checkbox" id="botonmenu">
-                    <label for="botonmenu"> <img src="img/588a6507d06f6719692a2d15.png" alt="ññ" height="20px" width="20px"></label> 
+                    <a href="#"><i class="fas fa-bars"></i></a> 
+                
                     <ul>
                         <li> 
                             <div class="busqueda">
@@ -48,7 +50,7 @@
             <input type="text" placeholder="user..." >
             <input type="text" placeholder="password..."><br>
             <button id="button">Enviar</button>
-        </div>
+    </div>
 
         <footer>
             
