realicé el main, con las secciones de las noticias

--- a/index.html
+++ b/index.html
@@ -37,6 +37,57 @@
                 </div>
         </nav>
     </header>
+    <main class="contenedor">
+        <seccion class="noticia">
+            <img src="/img/foto_noticia_temporal.png" alt="Deportes">
+            <article>
+                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Voluptatum pariatur repudiandae deserunt ea mollitia maiores saepe sunt explicabo exercitationem
+                     vero! Sint architecto vel impedit nostrum labore. Eaque magnam deserunt consectetur, vero! Sint architecto vel impedit nostrum labore. 
+                     Eaque magnam deserunt consectetur!</p>
+                     <a href="Deportes.html"><button>Ver más</button></a>
+            </article>
+
+        </seccion>
+        <seccion class="noticia">
+            <img src="/img/foto_noticia_temporal.png" alt="Sociedad">
+            <article>
+                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Voluptatum pariatur repudiandae deserunt ea mollitia maiores saepe sunt explicabo exercitationem
+                     vero! Sint architecto vel impedit nostrum labore. Eaque magnam deserunt consectetur, vero! Sint architecto vel impedit nostrum labore. 
+                     Eaque magnam deserunt consectetur!
+                </p>
+                <a href="Sociedad.html"><button>Ver más</button></a>
+            </article>
+        </seccion>
+        <seccion class="noticia">
+            <img src="/img/foto_noticia_temporal.png" alt="Arte">
+            <article>
+                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Voluptatum pariatur repudiandae deserunt ea mollitia maiores saepe sunt explicabo exercitationem
+                     vero! Sint architecto vel impedit nostrum labore. Eaque magnam deserunt consectetur, vero! Sint architecto vel impedit nostrum labore. 
+                     Eaque magnam deserunt consectetur!
+                </p>
+                <a href="Arte.html"><button>Ver más</button></a>
+            </article>
+
+        </seccion>
+        <seccion class="noticia">
+            <img src="/img/foto_noticia_temporal.png" alt="Recreación">
+            <article>
+                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Voluptatum pariatur repudiandae deserunt ea mollitia maiores saepe sunt explicabo exercitationem
+                     vero! Sint architecto vel impedit nostrum labore. Eaque magnam deserunt consectetur, vero! Sint architecto vel impedit nostrum labore. 
+                     Eaque magnam deserunt consectetur!</p>
+                     <a href="Recreacion.html"><button>Ver más</button></a>>
+            </article>
+        </seccion>
+        <seccion class="noticia">
+            <img src="/img/foto_noticia_temporal.png" alt="Tecnología">
+            <article>
+                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Voluptatum pariatur repudiandae deserunt ea mollitia maiores saepe sunt explicabo exercitationem
+                     vero! Sint architecto vel impedit nostrum labore. Eaque magnam deserunt consectetur, vero! Sint architecto vel impedit nostrum labore. 
+                     Eaque magnam deserunt consectetur!</p>
+                     <a href="Tecnologia.html"><button>Ver más</button></a>
+            </article>
+        </seccion>
+    </main>
     <div class="mas_leido">
         <h2>Lo más leído</h2>
         <img src="img/espacio.jpg" alt="falta" width="60%" height="10%">
@@ -51,6 +102,7 @@
             <input type="text" placeholder="password..."><br>
             <button id="button">Enviar</button>
     </div>
+    
 
         <footer>
             
