Agregué el logo del diario en el body y un h1 'noticias destacadas'

--- a/index.html
+++ b/index.html
@@ -35,12 +35,17 @@
             </div>
         </nav>
     </header>
-
+    <div>
+        <div class="logo_noticias">
+            <a href="index.html"><img src="img/360logo.jpg" alt="logo_diario" width="170px" height="150px"></a>
+            <h1>Noticias destacadas</h1>
+        </div>
+    </div>
     <div class="contenedor-principal">
         <main class="hijo">
             <section class="hijo2">
                 <article>
-                    <img src="/img/foto_noticia_temporal.png" width="200px" alt="">
+                    <img src="img/foto_noticia_temporal.png" width="200px" alt="">
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Amet nisi sapiente reiciendis, maiores, voluptas consequuntur quaerat ut, rem ex rerum fugit? Veniam, 
                         ea iste beatae totam nulla aperiam distinctio molestias!
                         Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio sit blanditiis dolores a fugit animi nostrum, provident 
@@ -50,7 +55,7 @@
             </section>
             <section class="hijo2">
                 <article>
-                    <img src="/img/foto_noticia_temporal.png" width="200px" alt="">
+                    <img src="img/foto_noticia_temporal.png" width="200px" alt="">
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Amet nisi sapiente reiciendis, maiores, voluptas consequuntur quaerat ut, rem ex rerum fugit? Veniam, 
                         ea iste beatae totam nulla aperiam distinctio molestias!
                         Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio sit blanditiis dolores a fugit animi nostrum, provident 
@@ -60,7 +65,7 @@
             </section>
             <section class="hijo2">
                 <article>
-                    <img src="/img/foto_noticia_temporal.png" width="200px" alt="">
+                    <img src="img/foto_noticia_temporal.png" width="200px" alt="">
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Amet nisi sapiente reiciendis, maiores, voluptas consequuntur quaerat ut, rem ex rerum fugit? Veniam, 
                         ea iste beatae totam nulla aperiam distinctio molestias!
                         Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio sit blanditiis dolores a fugit animi nostrum, provident 
@@ -70,7 +75,7 @@
             </section>
             <section class="hijo2">
                 <article>
-                    <img src="/img/foto_noticia_temporal.png" width="200px" alt="">
+                    <img src="img/foto_noticia_temporal.png" width="200px" alt="">
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Amet nisi sapiente reiciendis, maiores, voluptas consequuntur quaerat ut, rem ex rerum fugit? Veniam, 
                         ea iste beatae totam nulla aperiam distinctio molestias!
                         Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio sit blanditiis dolores a fugit animi nostrum, provident 
@@ -80,7 +85,7 @@
             </section>
             <section class="hijo2">
                 <article>
-                    <img src="/img/foto_noticia_temporal.png" width="200px" alt="">
+                    <img src="img/foto_noticia_temporal.png" width="200px" alt="">
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Amet nisi sapiente reiciendis, maiores, voluptas consequuntur quaerat ut, rem ex rerum fugit? Veniam, 
                         ea iste beatae totam nulla aperiam distinctio molestias!
                         Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio sit blanditiis dolores a fugit animi nostrum, provident 
@@ -95,7 +100,7 @@
                 Lo más leído
             </h2>
             <article class="hijo3">
-                <img src="/img/foto_noticia_temporal.png" width="200px" alt="">
+                <img src="img/foto_noticia_temporal.png" width="200px" alt="">
                 <h3>Titulo de la noticia</h3>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis, impedit in, at iusto natus libero nulla aliquam id ipsum repellat accusantium
                     dolor facere aliquid nostrum explicabo officia quasi nobis vel.
@@ -103,7 +108,7 @@
                 <a href="#"  class="boton"><button">Ver más</button></a>
             </article>
             <article class="hijo3">
-                <img src="/img/foto_noticia_temporal.png" width="200px" alt="">
+                <img src="img/foto_noticia_temporal.png" width="200px" alt="">
                 <h3>Titulo de la noticia</h3>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis, impedit in, at iusto natus libero nulla aliquam id ipsum repellat accusantium
                     dolor facere aliquid nostrum explicabo officia quasi nobis vel.
