se modificaron los botones, y los colores del aside, tambien se agregó publicidad

--- a/index.html
+++ b/index.html
@@ -50,7 +50,8 @@
                         ea iste beatae totam nulla aperiam distinctio molestias!
                         Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio sit blanditiis dolores a fugit animi nostrum, provident 
                         quo mollitia similique ex voluptate quae ipsa amet. Dolorum ex corporis similique illum.
-                    </p>
+                    </p><br>
+                    <a href="Deportes.html" target="_blanck"  class="boton"><button">Ver más</button></a>
                 </article>
             </section>
             <section class="hijo2">
@@ -60,7 +61,8 @@
                         ea iste beatae totam nulla aperiam distinctio molestias!
                         Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio sit blanditiis dolores a fugit animi nostrum, provident 
                         quo mollitia similique ex voluptate quae ipsa amet. Dolorum ex corporis similique illum.
-                    </p>
+                    </p><br>
+                    <a href="Sociedad.html" target="_blanck"  class="boton" ><button">Ver más</button></a>
                 </article>
             </section>
             <section class="hijo2">
@@ -70,7 +72,8 @@
                         ea iste beatae totam nulla aperiam distinctio molestias!
                         Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio sit blanditiis dolores a fugit animi nostrum, provident 
                         quo mollitia similique ex voluptate quae ipsa amet. Dolorum ex corporis similique illum.
-                    </p>
+                    </p><br>
+                    <a href="Arte.html" target="_blanck"  class="boton"><button">Ver más</button></a>
                 </article>
             </section>
             <section class="hijo2">
@@ -80,7 +83,8 @@
                         ea iste beatae totam nulla aperiam distinctio molestias!
                         Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio sit blanditiis dolores a fugit animi nostrum, provident 
                         quo mollitia similique ex voluptate quae ipsa amet. Dolorum ex corporis similique illum.
-                    </p>
+                    </p><br>
+                    <a href="Recreacion.html" target="_blanck"  class="boton"><button">Ver más</button></a>
                 </article>
             </section>
             <section class="hijo2">
@@ -90,7 +94,8 @@
                         ea iste beatae totam nulla aperiam distinctio molestias!
                         Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio sit blanditiis dolores a fugit animi nostrum, provident 
                         quo mollitia similique ex voluptate quae ipsa amet. Dolorum ex corporis similique illum.
-                    </p>
+                    </p><br>
+                    <a href="Tecnologia.html" target="_blanck"  class="boton"><button">Ver más</button></a>
                 </article>
             </section>
         </main>
@@ -124,7 +129,23 @@
                 <input class="boton-enviar" type="submit" value="Enviar">
             </form>
         </aside>
-
+    </div>
+    <div class="publicidad">
+        <div class="publicidad1">
+            <img src="/img/publicidad1.jpg" alt="">
+        </div>
+        <div class="publicidad1">
+            <img src="/img/publicidad2.png" alt="">
+        </div>
+        <div class="publicidad1">
+            <img src="/img/publicidad3.jpg" alt="">
+        </div>
+        <div class="publicidad1">
+            <img src="/img/publicidad4.jpg" alt="">
+        </div>
+        <div class="publicidad1">
+            <img src="/img/publicidad5.jpg" alt="">
+        </div>
     </div>
     
 </body>
