--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+    <!---------------- Menú de navegación-------------------->
     <header class="barra-navegacion">
         <nav>
             <div class="menu">
@@ -36,11 +37,13 @@
         </nav>
     </header>
     <div>
+        <!---------------- Encabezado---------------------------->
         <div class="logo_noticias">
             <a href="index.html"><img src="img/360logo.jpg" alt="logo_diario" width="170px" height="150px"></a>
             <h1>Noticias destacadas</h1>
         </div>
     </div>
+     <!---------------- Main, sección de noticias----------------->
     <div class="contenedor-principal">
         <main class="hijo">
             <section class="hijo2">
@@ -99,7 +102,7 @@
                 </article>
             </section>
         </main>
-
+         <!------------------------- Aside----------------------------->
         <aside class="lo-mas-leido">
             <h2 class="titulo">
                 Lo más leído
@@ -130,6 +133,7 @@
             </form>
         </aside>
     </div>
+     <!---------------- Main, Publicidad----------------->
     <div class="publicidad">
         <div class="publicidad1">
             <img src="/img/publicidad1.jpg" alt="">
