se hace modificaion del footer

--- a/index.html
+++ b/index.html
@@ -152,6 +152,21 @@
             <img src="/Videos/cocacolagiphy-5.gif" alt="">
         </div>
     </div>
-    
+    <footer>
+        <div class="container">
+          <div class="row">
+            <div class="columna1">
+                <img src="img/icon.png" class="logo footer">
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis, impedit in, at iusto natus libero nulla aliquam id ipsum repellat accusantium
+                    dolor facere aliquid nostrum explicabo officia quasi nobis vel.</p>  
+            </div>
+          </div>
+          <div class="columna2">
+            <h3>
+                temas relacionados
+            </h3>
+          </div>
+        </div>
+    </footer>
 </body>
 </html>
