--- a/index.html
+++ b/index.html
@@ -156,16 +156,44 @@
         <div class="container">
           <div class="row">
             <div class="columna1">
-                <img src="img/icon.png" class="logo footer">
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis, impedit in, at iusto natus libero nulla aliquam id ipsum repellat accusantium
-                    dolor facere aliquid nostrum explicabo officia quasi nobis vel.</p>  
-            </div>
+              <img src="img/icon.png" class="logo footer">
+               <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis, impedit in, at iusto natus libero nulla aliquam id ipsum repellat accusantium
+                dolor facere aliquid nostrum explicabo officia quasi nobis vel.</p>  
+           </div>
           </div>
           <div class="columna2">
             <h3>
                 temas relacionados
             </h3>
+             <ul>
+               <li><a href="#">tema 1</a></li>
+               <li><a href="#">tema 1</a></li>
+               <li><a href="#">tema 1</a></li>
+             </ul>
           </div>
+          <div class="columna3">
+            <h3>
+                Datos de contacto
+            </h3>
+             <ul>
+               <li>aquirosmarin@gmail.com</li>
+               <li>+573507041623</li>
+               <li>medellin,colombia</li>
+             </ul>
+          </div>
+          <div class="columna4">
+            <h3>
+                Redes sociales
+            </h3>
+             <ul>
+               <li><a href="#"><i></i>></a></li>
+               <li><a href="#"><i></i>></a></li>
+               <li><a href="#"><i></i>></a></li>
+             </ul>
+          </div>
+        </div>
+        <div class="barra-footer">
+             &copy; derechos reservados-2020
         </div>
     </footer>
 </body>
