pre entrega html y css del footer

--- a/index.html
+++ b/index.html
@@ -164,9 +164,9 @@
                 temas relacionados
             </h3>
              <ul>
-               <li><a href="#">tema 1</a></li>
-               <li><a href="#">tema 1</a></li>
-               <li><a href="#">tema 1</a></li>
+               <li><a href="#">inicio</a></li>
+               <li><a href="#">delante</a></li>
+               <li><a href="#">atras</a></li>
              </ul>
           </div>
           <div class="columna3">
@@ -184,9 +184,9 @@
                 Redes sociales
             </h3>
              <ul>
-               <li><a href="#"><i></i>></a></li>
-               <li><a href="#"><i></i>></a></li>
-               <li><a href="#"><i></i>></a></li>
+               <li><a href="#"><i>facebook</i>></a></li>
+               <li><a href="#"><i>twitter</i>></a></li>
+               <li><a href="#"><i>instagram</i>></a></li>
              </ul>
            </div>
           </div>
