se adjunta informacion de email en html

--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
             </h3>
              <ul>
                <li><a href="#">inicio</a></li>
-               <li><a href="#">delante</a></li>
+               <li><a href="#">avance</a></li>
                <li><a href="#">atras</a></li>
              </ul>
           </div>
@@ -175,8 +175,10 @@
             </h3>
              <ul>
                <li>aquirosmarin@gmail.com</li>
-               <li>+573507041623</li>
-               <li>medellin,colombia</li>
+               <li>Franco_cli_cli@hotmail.com</li>
+               <li>linavilla.2@gmail.com</li>
+               <li>lopezgonzalofran@gmail.com</li>
+               <li>m.e.cantero.dev@gmail.com</li>
              </ul>
           </div>
           <div class="columna4">
