eliminé intento de poner lupa en búsqueda

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                 <ul>
                     <li> 
                         <div class="busqueda">
-                            <input type="text" name="Buscar" placeholder="Buscar....; &#xe03e"class="src" autocomplete="off">
+                            <input type="text" name="Buscar" placeholder="Buscar...."class="src" autocomplete="off">
                         </div>
                     </li>
                     <li> <a href="Deportes.html">Deportes </a> </li> 
