--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
         </div>
     </div>
     <footer>
-        <div class="container">
+        <!-- <div class="container">
           <div class="columna1">
               <img src="img/icon.png" class="logo footer">
                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis, impedit in, at iusto natus libero nulla aliquam id ipsum repellat accusantium
@@ -194,7 +194,31 @@
           </div>
         <div class="barra-footer">
              &copy; derechos reservados-2020
-        </div>
+        </div> -->
+
+        <div class="contenedor-footer">
+            <div class="img">
+                <h4>Diario Digital</h4>
+                <img src="/img/logo.png" width="300px" alt="">
+            </div>
+            <div class="columna3">
+                <h4>
+                    Datos de contacto
+                </h4>
+                 <ul>
+                   <li>aquirosmarin@gmail.com</li>
+                   <li>Franco_cli_cli@hotmail.com</li>
+                   <li>linavilla.2@gmail.com</li>
+                   <li>lopezgonzalofran@gmail.com</li>
+                   <li>m.e.cantero.dev@gmail.com</li>
+                 </ul>
+            </div>
+            <div class="redes">
+                <h4>Redes Sociales</h4>
+                <a href="https://www.facebook.com" class="facebook"><i class="fab fa-facebook-square"></i></a>
+                <a href="https://www.twitter.com" class="twitter"><i class="fab fa-twitter-square"></i></a>
+                <a href="https://www.youtube.com" class="youtube"><i class="fab fa-youtube"></i></a>
+            </div>
     </footer>
 </body>
 </html>
