Se cambió el background del aside, y se agregó img de la noticia de tecnologia

--- a/index.html
+++ b/index.html
@@ -93,11 +93,10 @@
             </section>
             <section class="hijo2">
                 <article>
-                    <img src="img/foto_noticia_temporal.png" width="200px" alt="">
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Amet nisi sapiente reiciendis, maiores, voluptas consequuntur quaerat ut, rem ex rerum fugit? Veniam, 
-                        ea iste beatae totam nulla aperiam distinctio molestias!
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio sit blanditiis dolores a fugit animi nostrum, provident 
-                        quo mollitia similique ex voluptate quae ipsa amet. Dolorum ex corporis similique illum.
+                    <h2 class="titulo-noticia">Así avanzan los planes piloto 5G en Colombia</h2>
+                    <img src="img/tecnologia.jpg" width="500px" alt="">
+                    <p>En mayo pasado, el país dio sus primeros pasos para probar las redes de quinta generación, a través del plan piloto realizado en la Secretaría de Salud de Bogotá, operado por Movistar y Huawei, en donde se desplegaron el uso de cámaras termográficas, con el fin de monitorear la temperatura de las personas que transitan en ese lugar.
+                        A partir de ahí, Colombia ha desarrollado, hasta el momento, 41 proyectos en cinco ciudades del país: Bogotá, Cali, Medellín, Tolú y Barrancabermeja.
                     </p><br>
                     <a href="Tecnologia.html" target="_blanck"  class="boton"><button">Ver más</button></a>
                 </article>
@@ -132,6 +131,23 @@
                 <input type="email" name="email" id="email" placeholder="Email">
                 <input class="boton-enviar" type="submit" value="Enviar">
             </form>
+            <div class="publicidad-aside">
+                <div class="publicidad1">
+                    <img src="/img/publicidad1.jpg" width="200" alt="">
+                </div>
+                <div class="publicidad1">
+                    <img src="/img/publicidad2.png" width="200"  alt="">
+                </div>
+                <div class="publicidad1">
+                    <img src="/img/publicidad3.jpg" width="200"  alt="">
+                </div>
+                <div class="publicidad1">
+                    <img src="/img/publicidad4.jpg" width="200"  alt="">
+                </div>
+                <div class="publicidad1">
+                    <img src="/img/publicidad5.jpg" width="200"  alt="">
+                </div>
+            </div>
         </aside>
     </div>
      <!---------------- Main, Publicidad----------------->
