creando mi pag. de tecno.

--- a/Tecnologia.html
+++ b/Tecnologia.html
@@ -11,5 +11,38 @@
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Russo+One&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="styles.css">
+    <script src="https://kit.fontawesome.com/4de09098c3.js" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="tecnologia.css">
 </head>
+<body>
+    <!---------------- Menú de navegación-------------------->
+    <header class="barra-navegacion">
+        <nav>
+            <div class="menu">
+                <input type="checkbox" id="botonmenu">
+                <a href="#"><i class="fas fa-bars"></i></a>
+                <ul>
+                    <li> 
+                        <div class="busqueda">
+                            <input type="text" name="Buscar" placeholder="Buscar...."class="src" autocomplete="off">
+                        </div>
+                    </li>
+                    <li> <a href="Deportes.html">Deportes </a> </li> 
+                    <li> <a href="Sociedad.html">Sociedad </a> </li> 
+                    <li> <a href="Arte.html">Arte </a> </li> 
+                    <li> <a href="Recreacion.html">Recreacion </a> </li> 
+                    <li> <a href="Tecnologia.html">Tecnologia </a> </li>
+                </ul>
+            </div>
+        </nav>
+    </header>
+    <div>
+        <!---------------- Encabezado---------------------------->
+        <div class="logo_noticias">
+            <a href="index.html"><img src="img/360logo.jpg" alt="logo_diario" width="170px" height="150px"></a>
+            <h1>NOTICIAS DESTACADAS</h1>
+            <span>Dólar: $81,55 compra | $88,25 venta</span>
+        </div>
+    </div>
+</body>
+</html>
