Tragajé un poco en el main

--- a/Tecnologia.html
+++ b/Tecnologia.html
@@ -50,7 +50,7 @@
     <main>
         <section  class="noticias">
             <h1>Así avanzan los planes piloto 5G en Colombia</h1>
-            <p>El país cuenta con 41 proyectos en cinco de sus ciudades, según el Ministerio de las TIC.<p>
+            <p class="subtitulo">El país cuenta con 41 proyectos en cinco de sus ciudades, según el Ministerio de las TIC.<p>
             <article class="noticia-tecnologia">
                 <div class="imagen">
                     <img src="/img/tecnologia.jpg"alt="5G En Colombia">
@@ -60,14 +60,20 @@
                     En mayo pasado, el país dio sus primeros pasos para probar las redes de quinta generación, a través del plan piloto realizado en la Secretaría de Salud de Bogotá, operado por Movistar y Huawei, en donde se desplegaron el uso de cámaras termográficas, con el fin de monitorear la temperatura de las personas que transitan en ese lugar.
                     A partir de ahí, Colombia ha desarrollado, hasta el momento, 41 proyectos en cinco ciudades del país: Bogotá, Cali, Medellín, Tolú y Barrancabermeja.
                 </p>
-                <h3>Temas relacionados</h3>
+                <h3 class="titulo-temas">Temas relacionados</h3>
                 <div class="temas-relacionados">
-                    <h5>UBER <span>DIC 12</span></h5>
+                    <div class="tema1">
+                        <h5>UBER <span>DIC 12</span></h5>
                     <p><a href="#">Los hechos tecnológicos que pasaron en el país en el 2020</a></p>
-                    <h5>5G DIC 07<span>DIC 07</span></h5>
+                    </div>
+                    <div class="tema2">
+                        <h5>5G DIC 07<span>DIC 07</span></h5>
                     <p><a href="#">Europa ya piensa en redes 6G y empieza proyecto</a></p>
-                    <h5>5G DIC 07<span>DIC 07</span></h5>
+                    </div>
+                    <div class="tema3">
+                        <h5>5G DIC 07<span>DIC 07</span></h5>
                     <p><a href="#">Estas son las tecnologías que ya se están probando con 5G en Colombia</a></p>    
+                    </div>  
                 </div>
                 <p>
                     Las redes 5G son reconocidas por una velocidad mucho más alta que la de su predecesora, al tiempo que cuentan con una menor latencia, que es el tiempo de respuesta entre las comunicaciones. Expertos describen que permite más cantidad de dispositivos conectados a internet, sin que afecte la calidad.
