Agregué la foto y párte de la noticia de Andrés

--- a/index.html
+++ b/index.html
@@ -71,11 +71,12 @@
             </section>
             <section class="hijo2">
                 <article>
-                    <img src="img/foto_noticia_temporal.png" width="200px" alt="">
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Amet nisi sapiente reiciendis, maiores, voluptas consequuntur quaerat ut, rem ex rerum fugit? Veniam, 
-                        ea iste beatae totam nulla aperiam distinctio molestias!
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio sit blanditiis dolores a fugit animi nostrum, provident 
-                        quo mollitia similique ex voluptate quae ipsa amet. Dolorum ex corporis similique illum.
+                    <h2 class="titulo-noticia">Dirk Dzimirsky, el hiperrealismo que sobrecoge.</h2>
+                    <img src="img/arte.jpg" width="300px" alt="Arte">
+                    <h5>20 octubre, 2020 por Juan</h5>
+                    <p>¡Parece una foto!, ¡Es imposible que alguien pueda dibujar así!, ¡Se le ven hasta los poros de la piel! ¿No has pensado eso al ver algunos dibujos hiperrealistas?
+                        Te voy a enseñar aquí a los 5 mejores artistas hiperrealistas del momento, con una selección de sus mejores dibujos y videos donde los vamos a ver en plena acción.
+                         Como dirían en un concierto… ¡Con todos ustedes: Dzimirsky, Dascanio, Cadden, Facio y Okafor! ¡Que comience el espectáculo y prepara tus ojos para ver algo asombroso!
                     </p><br>
                     <a href="Arte.html" target="_blanck"  class="boton"><button">Ver más</button></a>
                 </article>
