Agregue deportes y arrelge mi seccion

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                 <ul>
                     <li> 
                         <div class="busqueda">
-                            <input type="text" name="Buscar" placeholder="Buscar______________________&#xf002;"class="src" autocomplete="off">
+                            <input type="text" name="Buscar" placeholder="Buscar______________&#xf002;"class="src" autocomplete="off">
                         </div>
                     </li>
                     <li> <a href="Deportes.html">Deportes </a> </li> 
@@ -151,7 +151,7 @@
             </div>
         </aside>
     </div>
-     <!---------------- Main, Publicidad----------------->
+        <!---------------- Main, Publicidad----------------->
     <div class="publicidad">
         <div class="publicidad1">
             <img src="/Videos/200.gif" alt="">
